[gd_scene load_steps=23 format=3 uid="uid://ctl21565djtmg"]

[ext_resource type="Script" uid="uid://7enwuawgqfnl" path="res://Scripts/Enemy/Bosses/tsubasahr(b2).gd" id="1_maw6k"]
[ext_resource type="Shader" uid="uid://bu84nepp2pfct" path="res://Shaders/Defeat.gdshader" id="2_6tjbp"]
[ext_resource type="Texture2D" uid="uid://g1t5oliskodh" path="res://Assets/Sprites/Foozle_2DS0013_Void_EnemyFleet_2/Nairan/Designs - Base/PNGs/Nairan - Battlecruiser - Base.png" id="3_jupnw"]
[ext_resource type="Texture2D" uid="uid://c18mjk8mvrjr0" path="res://Assets/Sprites/Foozle_2DS0013_Void_EnemyFleet_2/Nairan/Designs - Base/PNGs/Nairan - Torpedo Ship - Base.png" id="4_1wm2c"]
[ext_resource type="Texture2D" uid="uid://doxmmxqgnhfh5" path="res://Assets/Sprites/Foozle_2DS0012_Void_EnemyFleet_1/Kla'ed/Base/PNGs/Kla'ed - Torpedo Ship - Base.png" id="4_uq7wl"]
[ext_resource type="FontFile" uid="uid://dk6ts2l4bajko" path="res://Assets/Fonts/TERMINAT.TTF" id="5_de04w"]
[ext_resource type="Texture2D" uid="uid://qv53ko4er2rq" path="res://Assets/Sprites/Foozle_2DS0014_Void_EnemyFleet_3/Nautolan/Designs - Base/PNGs/Nautolan Ship - Torpedo Ship.png" id="5_mewx8"]
[ext_resource type="Shader" uid="uid://cxyxmpgjeluux" path="res://Shaders/Tsubasahr(B2F3).gdshader" id="6_1gl3d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7afes"]
shader = ExtResource("2_6tjbp")
shader_parameter/flicker_speed = 10.0
shader_parameter/flicker_intensity = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a002i"]
size = Vector2(148.544, 38.4379)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1xvln"]
shader = ExtResource("6_1gl3d")
shader_parameter/original_color_1 = Color(0.431373, 0.152941, 0.152941, 1)
shader_parameter/original_color_2 = Color(0.701961, 0.219608, 0.192157, 1)
shader_parameter/original_color_3 = Color(0.917647, 0.309804, 0.211765, 1)
shader_parameter/original_color_4 = Color(0.278431, 0.0901961, 0.0941176, 1)
shader_parameter/new_color_1 = Color(0.026268, 0, 1, 1)
shader_parameter/new_color_2 = Color(0, 0.329904, 1, 1)
shader_parameter/new_color_3 = Color(0.0218969, 0, 0.506789, 1)
shader_parameter/new_color_4 = Color(0.0218969, 0, 0.506789, 1)
shader_parameter/tolerance = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s4xhg"]
shader = ExtResource("6_1gl3d")
shader_parameter/original_color_1 = Color(0.431373, 0.152941, 0.152941, 1)
shader_parameter/original_color_2 = Color(0.701961, 0.219608, 0.192157, 1)
shader_parameter/original_color_3 = Color(0.917647, 0.309804, 0.211765, 1)
shader_parameter/original_color_4 = Color(0.278431, 0.0901961, 0.0941176, 1)
shader_parameter/new_color_1 = Color(1, 0, 0, 1)
shader_parameter/new_color_2 = Color(1, 0.223786, 0.223786, 1)
shader_parameter/new_color_3 = Color(0.605224, 0, 0.0466956, 1)
shader_parameter/new_color_4 = Color(0.605224, 0, 0.0466956, 1)
shader_parameter/tolerance = 0.1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h8sjj"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_guoqf"]
bg_color = Color(1, 0.865883, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_n3o3c"]
resource_name = "LeftWing2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LEFT WING 2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1139, -80), Vector2(-73, -8)]
}

[sub_resource type="Animation" id="Animation_2ad12"]
resource_name = "LeftWing3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LEFT WING 3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1139, 265), Vector2(-72, -8)]
}

[sub_resource type="Animation" id="Animation_ngua8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LEFT WING 2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1139, -80)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RIGHT WING 2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1079, -79)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LEFT WING 3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1139, 265)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RIGHT WING 3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1079, 266)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ndjtq"]
_data = {
&"LeftWing2": SubResource("Animation_n3o3c"),
&"LeftWing3": SubResource("Animation_2ad12"),
&"RESET": SubResource("Animation_ngua8")
}

[sub_resource type="Animation" id="Animation_lp2m2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RIGHT WING 2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1079, -79)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RIGHT WING 3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1079, 266)]
}

[sub_resource type="Animation" id="Animation_sg0w5"]
resource_name = "RightWing2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RIGHT WING 2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1079, -79), Vector2(71, -8)]
}

[sub_resource type="Animation" id="Animation_kt63o"]
resource_name = "RightWing3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RIGHT WING 3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1079, 266), Vector2(63, -7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w6dqe"]
_data = {
&"RESET": SubResource("Animation_lp2m2"),
&"RightWing2": SubResource("Animation_sg0w5"),
&"RightWing3": SubResource("Animation_kt63o")
}

[node name="Tsubasahr (Boss 2)" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 14
motion_mode = 1
script = ExtResource("1_maw6k")

[node name="BASE" type="Area2D" parent="." groups=["Boss"]]
collision_layer = 32
collision_mask = 6

[node name="Base" type="Sprite2D" parent="BASE"]
texture_filter = 1
material = SubResource("ShaderMaterial_7afes")
rotation = 3.14159
scale = Vector2(8, 8)
texture = ExtResource("3_jupnw")

[node name="BaseCollisionShape" type="CollisionPolygon2D" parent="BASE"]
rotation = 3.14159
scale = Vector2(8, 8)
polygon = PackedVector2Array(-15, -49, -15, -46, -16, -46, -16, -42, -17, -42, -17, -38, -18, -38, -18, -34, -19, -34, -19, -30, -20, -30, -20, -25, -21, -25, -21, -20, -22, -20, -22, -14, -23, -14, -23, -8, -24, -8, -24, -7, -25, -7, -25, -5, -26, -5, -26, -3, -27, -3, -27, -1, -28, -1, -28, 1, -29, 1, -29, 3, -30, 3, -30, 5, -31, 5, -31, 32, -30, 32, -30, 34, -29, 34, -29, 32, -28, 32, -28, 30, -27, 30, -27, 28, -26, 28, -26, 26, -25, 26, -25, 24, -24, 24, -24, 22, -23, 22, -23, 31, -22, 31, -22, 32, -21, 32, -21, 33, -18, 33, -18, 32, -17, 32, -17, 33, -16, 33, -16, 35, -8, 35, -8, 33, -6, 33, -6, 34, -5, 34, -5, 36, 5, 36, 5, 34, 6, 34, 6, 33, 8, 33, 8, 35, 16, 35, 16, 33, 17, 33, 17, 32, 18, 32, 18, 33, 21, 33, 21, 32, 22, 32, 22, 31, 23, 31, 23, 22, 24, 22, 24, 24, 25, 24, 25, 26, 26, 26, 26, 28, 27, 28, 27, 30, 28, 30, 28, 32, 29, 32, 29, 34, 30, 34, 30, 32, 31, 32, 31, 5, 30, 5, 30, 3, 29, 3, 29, 1, 28, 1, 28, -1, 27, -1, 27, -3, 26, -3, 26, -5, 25, -5, 25, -7, 24, -7, 24, -8, 23, -8, 23, -14, 22, -14, 22, -20, 21, -20, 21, -25, 20, -25, 20, -30, 19, -30, 19, -34, 18, -34, 18, -38, 17, -38, 17, -42, 16, -42, 16, -46, 15, -46, 15, -49, 11, -49, 11, -48, 8, -48, 8, -49, 4, -49, 4, -30, 2, -30, 2, -31, 1, -31, 1, -32, -1, -32, -1, -31, -2, -31, -2, -30, -4, -30, -4, -49, -8, -49, -8, -48, -11, -48, -11, -49)
disabled = true

[node name="SpawnPoint" type="Marker2D" parent="BASE"]
position = Vector2(0, 321)

[node name="LEFT WING 1" type="Area2D" parent="." groups=["Boss"]]
collision_layer = 32
collision_mask = 6

[node name="LeftWing" type="Sprite2D" parent="LEFT WING 1"]
texture_filter = 1
position = Vector2(-281, 109)
scale = Vector2(8, 8)
texture = ExtResource("4_1wm2c")
region_enabled = true
region_rect = Rect2(0, 19.2146, 24.4293, 30.895)

[node name="LeftCollisionShape" type="CollisionShape2D" parent="LEFT WING 1"]
position = Vector2(-252.885, 118.674)
rotation = -0.472297
shape = SubResource("RectangleShape2D_a002i")
disabled = true

[node name="SpawnPoint" type="Marker2D" parent="LEFT WING 1"]
position = Vector2(-327, 198)

[node name="RIGHT WING 1" type="Area2D" parent="." groups=["Boss"]]
collision_layer = 32
collision_mask = 6

[node name="RightWing" type="Sprite2D" parent="RIGHT WING 1"]
texture_filter = 1
position = Vector2(282, 97)
scale = Vector2(8, 8)
texture = ExtResource("4_1wm2c")
flip_h = true
region_enabled = true
region_rect = Rect2(0, 19.2146, 24.5503, 27.933)

[node name="RightCollisionShape" type="CollisionShape2D" parent="RIGHT WING 1"]
position = Vector2(257, 116)
rotation = 0.400572
shape = SubResource("RectangleShape2D_a002i")
disabled = true

[node name="SpawnPoint" type="Marker2D" parent="RIGHT WING 1"]
position = Vector2(327, 198)

[node name="LEFT WING 2" type="Area2D" parent="." groups=["Boss"]]
position = Vector2(-1139, -80)
collision_layer = 32
collision_mask = 6

[node name="LeftWing" type="Sprite2D" parent="LEFT WING 2"]
texture_filter = 1
position = Vector2(-281, 109)
scale = Vector2(8, 8)
texture = ExtResource("5_mewx8")
region_enabled = true
region_rect = Rect2(0, 19.2146, 42.5864, 30.895)

[node name="LeftCollisionShape" type="CollisionShape2D" parent="LEFT WING 2"]
position = Vector2(-240, 109)
shape = SubResource("RectangleShape2D_a002i")
disabled = true

[node name="SpawnPoint" type="Marker2D" parent="LEFT WING 2"]
position = Vector2(-333, 148)

[node name="RIGHT WING 2" type="Area2D" parent="." groups=["Boss"]]
position = Vector2(1079, -79)
collision_layer = 32
collision_mask = 6

[node name="RightWing" type="Sprite2D" parent="RIGHT WING 2"]
texture_filter = 1
position = Vector2(282, 97)
scale = Vector2(8, 8)
texture = ExtResource("5_mewx8")
flip_h = true
region_enabled = true
region_rect = Rect2(0, 19.2146, 42.325, 27.933)

[node name="RightCollisionShape" type="CollisionShape2D" parent="RIGHT WING 2"]
position = Vector2(232, 110)
shape = SubResource("RectangleShape2D_a002i")
disabled = true

[node name="SpawnPoint" type="Marker2D" parent="RIGHT WING 2"]
position = Vector2(335, 151)

[node name="LEFT WING 3" type="Area2D" parent="." groups=["Boss"]]
position = Vector2(-1139, 265)
collision_layer = 32
collision_mask = 6

[node name="LeftWing" type="Sprite2D" parent="LEFT WING 3"]
texture_filter = 1
material = SubResource("ShaderMaterial_1xvln")
position = Vector2(-281, 109)
scale = Vector2(8, 8)
texture = ExtResource("4_uq7wl")
region_enabled = true
region_rect = Rect2(0, 19.2146, 42.5864, 30.895)

[node name="LeftCollisionShape" type="CollisionShape2D" parent="LEFT WING 3"]
position = Vector2(-317, 91)
shape = SubResource("RectangleShape2D_a002i")
disabled = true

[node name="SpawnPoint" type="Marker2D" parent="LEFT WING 3"]
position = Vector2(-403, 173)

[node name="RIGHT WING 3" type="Area2D" parent="." groups=["Boss"]]
position = Vector2(1079, 266)
collision_layer = 32
collision_mask = 6

[node name="RightWing" type="Sprite2D" parent="RIGHT WING 3"]
texture_filter = 1
material = SubResource("ShaderMaterial_s4xhg")
position = Vector2(120, -15)
scale = Vector2(8, 8)
texture = ExtResource("4_uq7wl")
centered = false
flip_h = true
region_enabled = true
region_rect = Rect2(0, 19.2146, 42.325, 27.933)

[node name="RightCollisionShape" type="CollisionShape2D" parent="RIGHT WING 3"]
position = Vector2(316, 92)
shape = SubResource("RectangleShape2D_a002i")
disabled = true

[node name="SpawnPoint" type="Marker2D" parent="RIGHT WING 3"]
position = Vector2(401, 169)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WARNING" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Warning" type="Label" parent="CanvasLayer/WARNING"]
layout_mode = 0
offset_left = 160.0
offset_top = 521.0
offset_right = 945.0
offset_bottom = 640.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("5_de04w")
theme_override_font_sizes/font_size = 111
text = "WARNING"

[node name="Mothership" type="Label" parent="CanvasLayer/WARNING"]
layout_mode = 0
offset_left = 166.0
offset_top = 623.0
offset_right = 1002.0
offset_bottom = 742.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_de04w")
theme_override_font_sizes/font_size = 38
text = "MOTHERSHIP DETECTED"

[node name="Name" type="Label" parent="CanvasLayer/WARNING"]
layout_mode = 0
offset_left = 166.0
offset_top = 660.0
offset_right = 1013.0
offset_bottom = 775.0
theme_override_colors/font_color = Color(1, 0.333333, 0, 1)
theme_override_fonts/font = ExtResource("5_de04w")
theme_override_font_sizes/font_size = 49
text = "NAME: TSUBASAHR"

[node name="NoRefuge" type="Label" parent="CanvasLayer/WARNING"]
layout_mode = 0
offset_left = 166.0
offset_top = 705.0
offset_right = 1002.0
offset_bottom = 824.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("5_de04w")
theme_override_font_sizes/font_size = 80
text = "NO REFUGE"

[node name="VisibleTimer" type="Timer" parent="CanvasLayer/WARNING"]
wait_time = 0.5

[node name="Boss Health" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/Boss Health"]
layout_mode = 1
offset_left = 180.0
offset_top = 32.0
offset_right = 825.0
offset_bottom = 73.0
theme_override_styles/background = SubResource("StyleBoxFlat_h8sjj")
theme_override_styles/fill = SubResource("StyleBoxFlat_guoqf")
value = 50.0
show_percentage = false

[node name="Name" type="Label" parent="CanvasLayer/Boss Health"]
layout_mode = 0
offset_left = 385.0
offset_top = 3.0
offset_right = 1170.0
offset_bottom = 122.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_de04w")
theme_override_font_sizes/font_size = 27
text = "TSUBASAHR"

[node name="FireSpeed" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ExplosionsTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 8.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
rotation = 3.14159
scale = Vector2(8, 8)
polygon = PackedVector2Array(-15, -49, -15, -46, -16, -46, -16, -42, -17, -42, -17, -38, -18, -38, -18, -34, -19, -34, -19, -30, -20, -30, -20, -25, -21, -25, -21, -20, -22, -20, -22, -14, -23, -14, -23, -8, -24, -8, -24, -7, -25, -7, -25, -5, -26, -5, -26, -3, -27, -3, -27, -1, -28, -1, -28, 1, -29, 1, -29, 3, -30, 3, -30, 5, -31, 5, -31, 32, -30, 32, -30, 34, -29, 34, -29, 32, -28, 32, -28, 30, -27, 30, -27, 28, -26, 28, -26, 26, -25, 26, -25, 24, -24, 24, -24, 22, -23, 22, -23, 31, -22, 31, -22, 32, -21, 32, -21, 33, -18, 33, -18, 32, -17, 32, -17, 33, -16, 33, -16, 35, -8, 35, -8, 33, -6, 33, -6, 34, -5, 34, -5, 36, 5, 36, 5, 34, 6, 34, 6, 33, 8, 33, 8, 35, 16, 35, 16, 33, 17, 33, 17, 32, 18, 32, 18, 33, 21, 33, 21, 32, 22, 32, 22, 31, 23, 31, 23, 22, 24, 22, 24, 24, 25, 24, 25, 26, 26, 26, 26, 28, 27, 28, 27, 30, 28, 30, 28, 32, 29, 32, 29, 34, 30, 34, 30, 32, 31, 32, 31, 5, 30, 5, 30, 3, 29, 3, 29, 1, 28, 1, 28, -1, 27, -1, 27, -3, 26, -3, 26, -5, 25, -5, 25, -7, 24, -7, 24, -8, 23, -8, 23, -14, 22, -14, 22, -20, 21, -20, 21, -25, 20, -25, 20, -30, 19, -30, 19, -34, 18, -34, 18, -38, 17, -38, 17, -42, 16, -42, 16, -46, 15, -46, 15, -49, 11, -49, 11, -48, 8, -48, 8, -49, 4, -49, 4, -30, 2, -30, 2, -31, 1, -31, 1, -32, -1, -32, -1, -31, -2, -31, -2, -30, -4, -30, -4, -49, -8, -49, -8, -48, -11, -48, -11, -49)

[node name="LWAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ndjtq")
}

[node name="RWAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_w6dqe")
}

[connection signal="body_entered" from="BASE" to="." method="_on_base_body_entered"]
[connection signal="area_entered" from="LEFT WING 1" to="." method="_on_left_wing_1_area_entered"]
[connection signal="body_entered" from="LEFT WING 1" to="." method="_on_left_wing_1_body_entered"]
[connection signal="area_entered" from="RIGHT WING 1" to="." method="_on_right_wing_1_area_entered"]
[connection signal="body_entered" from="RIGHT WING 1" to="." method="_on_right_wing_1_body_entered"]
[connection signal="area_entered" from="LEFT WING 2" to="." method="_on_left_wing_2_area_entered"]
[connection signal="body_entered" from="LEFT WING 2" to="." method="_on_left_wing_2_body_entered"]
[connection signal="area_entered" from="RIGHT WING 2" to="." method="_on_right_wing_2_area_entered"]
[connection signal="body_entered" from="RIGHT WING 2" to="." method="_on_right_wing_2_body_entered"]
[connection signal="area_entered" from="LEFT WING 3" to="." method="_on_left_wing_3_area_entered"]
[connection signal="body_entered" from="LEFT WING 3" to="." method="_on_left_wing_3_body_entered"]
[connection signal="area_entered" from="RIGHT WING 3" to="." method="_on_right_wing_3_area_entered"]
[connection signal="body_entered" from="RIGHT WING 3" to="." method="_on_right_wing_3_body_entered"]
[connection signal="timeout" from="CanvasLayer/WARNING/VisibleTimer" to="." method="_on_visible_timer_timeout"]
[connection signal="timeout" from="FireSpeed" to="." method="_on_fire_speed_timeout"]
[connection signal="timeout" from="ExplosionsTimer" to="." method="_on_explosions_timer_timeout"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
